<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_marginTop="48dp"
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_company_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_1"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_device_menu_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_username"
            android:paddingLeft="10dp"
            android:paddingTop="37dp"
            android:textSize="18dp"
            android:textColor="@color/text_1"
            app:layout_constraintTop_toBottomOf="@id/tv_company"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_device_menu_account_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"
            android:textColor="@color/text_8"
            android:textSize="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/tv_device_menu_user_name"
            app:layout_constraintLeft_toLeftOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>