<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data class=".ScanQrCodeViewDataBinding">
        <variable
            name="vm"
            type="com.jekma.futurelab.bluetooth.ScanQrCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_1">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20109439" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8016416" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8016416" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_has_permission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.obHasPermission ? 0:4}">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_horizontal_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <include
                android:id="@+id/world2"
                layout="@layout/view_custom_barcode_scanner"/>

            <com.journeyapps.barcodescanner.DecoratedBarcodeView
                android:id="@+id/zxing_barcode_scanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:zxing_framing_rect_width="250dp"
                app:zxing_framing_rect_height="250dp"
                app:zxing_scanner_layout="@layout/view_custom_barcode_scanner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_without_permission"
            android:layout_width="413dp"
            android:layout_height="434dp"
            android:visibility="@{vm.obHasPermission ? 4:0}"
            app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_horizontal_2">

            <TextView
                android:id="@+id/tv_qrcode_scan_qrcode_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_qrcode_scan"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_qrcode_open_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_1"
                android:text="@string/btn_qrcode_open_permission"
                android:textColor="@color/text_8"
                android:onClick="@{vm.doClickedOpenPermission}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_qrcode_scan_qrcode_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_where_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_8"
            android:text="@string/tv_where_qrcode"
            android:onClick="@{vm.doClickedWhereQrCode}"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="QRCode在哪裏"
            tools:ignore="NotSibling" />

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="@{vm.doClickedAdd}"
            android:clickable="@{vm.obHasPermission ? true : false}"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_1"
            app:layout_constraintLeft_toRightOf="@id/gl_horizontal_5">
            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/btn_add"
                tools:ignore="UseAppTint" />
<!--            android:tint="@{vm.obHasPermission ? @color/text_1 : @color/text_2 }"-->

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textColor="@{vm.obHasPermission ? @color/text_1 : @color/text_2 }"
                android:gravity="center|center_vertical"
                android:text="@string/tv_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_detect"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="@{vm.doClickedAdd}"
            android:clickable="@{vm.obHasPermission ? true : false}"
            app:layout_constraintRight_toLeftOf="@+id/ll_spotlight"
            app:layout_constraintLeft_toRightOf="@+id/ll_add"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_1">
            <ImageView
                android:id="@+id/iv_detect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/btn_detect"
                tools:ignore="UseAppTint" />
            <TextView
                android:id="@+id/tv_detect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:textColor="@{vm.obHasPermission ? @color/text_1 : @color/text_2 }"
                android:gravity="center|center_vertical"
                android:text="@string/tv_detect"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_spotlight"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="@{vm.obHasPermission ? true : false}"
            android:onClick="@{vm.doClickedSpotLight}"
            app:layout_constraintTop_toBottomOf="@id/gl_horizontal_1"
            app:layout_constraintRight_toLeftOf="@id/gl_horizontal_4">

            <ImageView
                android:id="@+id/iv_spotlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/btn_spotlight_close"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/tv_spotlight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@{vm.obHasPermission ? @color/text_1 : @color/text_2 }"
                android:layout_marginTop="12dp"
                android:gravity="center|center_vertical"
                android:text="@={vm.onSpotLight}"
                tools:text="Open/CLose"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
